--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^8.0.0",
     "jest": "^27.2.0",
+    "jest-mock-extended": "^3.0.5",
     "lint-staged": "^11.1.2",
     "mockdate": "^3.0.5",
+    "pg-mem": "^2.7.1",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
@@ -55,7 +57,9 @@
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
     "nodemon": "^2.0.12",
+    "pg": "^8.11.3",
     "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.3.17",
     "validator": "^13.6.0"
   },
   "engines": {
