feat: model the products entity

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
       "paths": {
         "@/tests/*": ["../tests/*"],
         "@/*": ["*"]
-      }
+      },
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true
     },
     "include": ["src", "tests"],
     "exclude": []
