--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^8.0.0",
-    "jest": "^27.2.0",
+    "jest": "^27.4.0",
     "jest-mock-extended": "^3.0.5",
     "lint-staged": "^11.1.2",
     "mockdate": "^3.0.5",
@@ -57,9 +57,9 @@
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
     "nodemon": "^2.0.12",
-    "pg": "^8.11.3",
+    "pg": "^8.7.1",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.3.17",
+    "typeorm": "0.2.29",
     "validator": "^13.6.0"
   },
   "engines": {
